--- a/.github/workflows/Publish Release.yml
+++ b/.github/workflows/Publish Release.yml
@@ -16,27 +16,32 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
+      
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: get version
+          python-version: ${{ env.python_ver }}
+      
+      - name: Get version
         id: version
         uses: notiz-dev/github-action-json-property@release
         with: 
           path: 'plugin.json'
           prop_path: 'Version'
-      - run: echo ${{steps.version.outputs.prop}} 
+
+      - run: echo ${{ steps.version.outputs.prop }}
+      
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r ./requirements.txt -t ./lib
           zip -r Flow.Launcher.Plugin.TestPlugin.zip . -x '*.git*'
+      
       - name: Publish
         if: success()
         uses: softprops/action-gh-release@v1
         with:
           files: 'Flow.Launcher.Plugin.TestPlugin.zip'
-          tag_name: "v${{steps.version.outputs.prop}}"
+          tag_name: "v${{ steps.version.outputs.prop }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
